--- a/MyTabLayout/app/src/main/res/layout/activity_main.xml
+++ b/MyTabLayout/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,11 @@
         android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="?attr/colorSecondary"
         app:tabTextColor="@android:color/white"/>
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 </LinearLayout>
