--- a/Submission2Project/app/src/main/res/layout/user_lists.xml
+++ b/Submission2Project/app/src/main/res/layout/user_lists.xml
@@ -37,34 +37,14 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:layout_toEndOf="@id/ava_photo"
-            android:textSize="14sp"
+            android:textSize="23sp"
             android:textStyle="bold"
             card_view:layout_constraintEnd_toEndOf="parent"
+            card_view:layout_constraintTop_toTopOf="parent"
+            card_view:layout_constraintBottom_toBottomOf="parent"
             card_view:layout_constraintStart_toEndOf="@+id/ava_photo"
-            card_view:layout_constraintTop_toTopOf="@+id/ava_photo"
             tools:text="@string/name" />
-        <TextView
-            android:id="@+id/company"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:textSize="15sp"
-            card_view:layout_constraintTop_toBottomOf="@+id/name"
-            card_view:layout_constraintStart_toEndOf="@+id/ava_photo"
-            tools:text="@string/company"
-            />
-        <TextView
-            android:id="@+id/location"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:textSize="15sp"
-            card_view:layout_constraintTop_toBottomOf="@+id/name"
-            card_view:layout_constraintStart_toEndOf="@+id/company"
-            tools:text="@string/location"
-            />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
